--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,11 @@
       content="Web site created using create-react-app"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>My-app</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <title>Rick and Morty API</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
